// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arch Bot FYI Closed Closes Issue in Admin Repository 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "labels": Array [
          "fyi-closed",
        ],
        "number": 284,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Closed Closes Issue in Admin Repository 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "number": 284,
        "owner": "choosenearme",
        "repo": "fyis",
        "state": "closed",
      },
    ],
  ],
}
`;
